--- a/iDoctor/View/DoctorsTableViewCell.xib
+++ b/iDoctor/View/DoctorsTableViewCell.xib
@@ -9,75 +9,120 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="145" id="KGk-i7-Jjw" customClass="DoctorsTableViewCell" customModule="iDoctor" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="356" height="145"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="248" id="KGk-i7-Jjw" customClass="DoctorsTableViewCell" customModule="iDoctor" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="391" height="248"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="356" height="145"/>
+                <rect key="frame" x="0.0" y="0.0" width="391" height="248"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VZL-qL-4Hn">
-                        <rect key="frame" x="0.0" y="0.0" width="356" height="145"/>
+                        <rect key="frame" x="10" y="10" width="371" height="228"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" translatesAutoresizingMaskIntoConstraints="NO" id="P1O-q6-uAX">
-                                <rect key="frame" x="218.5" y="0.0" width="137.5" height="145"/>
+                                <rect key="frame" x="251" y="5" width="120" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="PJv-4u-h9O"/>
                                     <constraint firstAttribute="height" constant="120" id="lMc-GP-Hof"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" distribution="fillProportionally" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="xw8-3K-SiG">
-                                <rect key="frame" x="0.0" y="0.0" width="218.5" height="145"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xw8-3K-SiG">
+                                <rect key="frame" x="0.0" y="20" width="251" height="97"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="دكتور محمد اربيع" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rgu-nR-z7I">
-                                        <rect key="frame" x="0.0" y="0.0" width="218.5" height="20.5"/>
+                                        <rect key="frame" x="119" y="0.0" width="132" height="24"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="اخصائي جراحة  عظام" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YXu-sy-eMQ">
-                                        <rect key="frame" x="0.0" y="62.5" width="143" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="الخليل ,شارع عين سارة مبنى المدينة" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nG1-yD-2rg">
-                                        <rect key="frame" x="37" y="62" width="143" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="EV0-i2-AuM">
+                                        <rect key="frame" x="83.5" y="34" width="167.5" height="28"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="اخصائي جراحة  عظام" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YXu-sy-eMQ">
+                                                <rect key="frame" x="0.0" y="0.0" width="142.5" height="28"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="spicalization" translatesAutoresizingMaskIntoConstraints="NO" id="hCd-qW-KXx">
+                                                <rect key="frame" x="147.5" y="0.0" width="20" height="28"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="28" id="eii-wt-b1v"/>
+                                                    <constraint firstAttribute="width" constant="20" id="gGE-b6-EK4"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YB1-eC-7A6">
+                                        <rect key="frame" x="20.5" y="72" width="230.5" height="25"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="الخليل ,شارع عين سارة مبنى المدينة" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nG1-yD-2rg">
+                                                <rect key="frame" x="0.0" y="0.0" width="214.5" height="25"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="map" translatesAutoresizingMaskIntoConstraints="NO" id="K4T-HF-Hwu">
+                                                <rect key="frame" x="214.5" y="0.0" width="16" height="25"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="16" id="Ge8-50-xOq"/>
+                                                    <constraint firstAttribute="height" constant="25" id="xsW-Be-RtL"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
+                                <color key="tintColor" red="0.0" green="0.67843137254901964" blue="0.99215686274509807" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="متوفر الان " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UOU-sp-7jw">
+                                <rect key="frame" x="271" y="95" width="80" height="20"/>
+                                <color key="backgroundColor" red="0.0" green="0.86666666670000003" blue="0.44705882349999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="lT3-5f-ia0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="masksToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="P1O-q6-uAX" firstAttribute="leading" secondItem="xw8-3K-SiG" secondAttribute="trailing" id="F2N-FP-mRh"/>
-                            <constraint firstItem="xw8-3K-SiG" firstAttribute="top" secondItem="VZL-qL-4Hn" secondAttribute="top" id="cYQ-Nl-7xV"/>
-                            <constraint firstAttribute="bottom" secondItem="P1O-q6-uAX" secondAttribute="bottom" constant="5" id="hyU-5k-UnG"/>
+                            <constraint firstItem="UOU-sp-7jw" firstAttribute="leading" secondItem="P1O-q6-uAX" secondAttribute="leading" constant="20" id="KRe-Db-7iA"/>
+                            <constraint firstItem="xw8-3K-SiG" firstAttribute="top" secondItem="VZL-qL-4Hn" secondAttribute="top" constant="20" id="cYQ-Nl-7xV"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="P1O-q6-uAX" secondAttribute="bottom" constant="10" id="gaX-Jz-dU8"/>
                             <constraint firstItem="P1O-q6-uAX" firstAttribute="top" secondItem="VZL-qL-4Hn" secondAttribute="top" constant="5" id="iAz-fK-G2d"/>
-                            <constraint firstAttribute="bottom" secondItem="xw8-3K-SiG" secondAttribute="bottom" id="mJQ-vf-acd"/>
+                            <constraint firstItem="UOU-sp-7jw" firstAttribute="bottom" secondItem="P1O-q6-uAX" secondAttribute="bottom" constant="-10" id="lzY-Ed-prb"/>
+                            <constraint firstItem="UOU-sp-7jw" firstAttribute="centerX" secondItem="P1O-q6-uAX" secondAttribute="centerX" id="mC6-PJ-fLW"/>
                             <constraint firstItem="xw8-3K-SiG" firstAttribute="leading" secondItem="VZL-qL-4Hn" secondAttribute="leading" id="nMt-6k-b5q"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="xw8-3K-SiG" secondAttribute="bottom" constant="10" id="slC-Mt-QLg"/>
                             <constraint firstAttribute="trailing" secondItem="P1O-q6-uAX" secondAttribute="trailing" id="xMc-k4-TkM"/>
+                            <constraint firstItem="UOU-sp-7jw" firstAttribute="trailing" secondItem="P1O-q6-uAX" secondAttribute="trailing" constant="-20" id="y4A-rv-AGK"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                 <real key="value" value="15"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                <real key="value" value="1"/>
+                                <real key="value" value="0.5"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="value" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
-                                <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="value" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
-                                <size key="value" width="1" height="0.0"/>
+                                <size key="value" width="0.0" height="7"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
-                                <real key="value" value="15"/>
+                                <real key="value" value="1"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
                                 <real key="value" value="1"/>
@@ -86,17 +131,19 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="VZL-qL-4Hn" secondAttribute="bottom" constant="10" id="B8L-gB-Uqt"/>
+                    <constraint firstAttribute="bottom" secondItem="VZL-qL-4Hn" secondAttribute="bottom" constant="10" id="CRz-NI-twU"/>
                     <constraint firstAttribute="trailing" secondItem="VZL-qL-4Hn" secondAttribute="trailing" constant="10" id="Mjn-k5-ZwG"/>
                     <constraint firstItem="VZL-qL-4Hn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Qlz-UH-IzQ"/>
                     <constraint firstItem="VZL-qL-4Hn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="sJB-kR-3PL"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="111.59420289855073" y="186.49553571428569"/>
+            <point key="canvasLocation" x="136.95652173913044" y="220.98214285714286"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="map" width="23" height="32"/>
         <image name="person" width="30" height="35.5"/>
+        <image name="spicalization" width="28" height="36"/>
     </resources>
 </document>
