--- a/iDoctor/Controller/Main/Cell/appointmentTableViewCell.xib
+++ b/iDoctor/Controller/Main/Cell/appointmentTableViewCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -205,6 +206,15 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="adress" destination="Y1U-uw-9QI" id="pD7-0D-9bK"/>
+                <outlet property="date" destination="0ob-3Z-rB2" id="RSZ-4r-Gft"/>
+                <outlet property="day" destination="1pz-DV-9lI" id="TKr-6d-1iz"/>
+                <outlet property="imageUI" destination="u76-uB-l0K" id="Mt8-oc-yFe"/>
+                <outlet property="name" destination="N8i-Xd-Hfg" id="q3a-5C-lfZ"/>
+                <outlet property="subname" destination="hoS-rk-OqY" id="ZbF-jF-xOM"/>
+                <outlet property="time" destination="BCZ-sn-9DX" id="9Ec-h6-B99"/>
+            </connections>
             <point key="canvasLocation" x="85.507246376811594" y="211.60714285714286"/>
         </tableViewCell>
     </objects>
